<resources>
    <string name="app_name">Desafio3</string>
    <string name="splash_spider">Splash Spider</string>
    <string name="marvel_logo">Marvel logo</string>
    <string name="logo_marvel">Logo Marvel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="comic_image">Comic image</string>
    <string name="comic_landscape">Comic Landscape</string>
    <string name="image_comic">Imagem Hq</string>
    <string name="published">Published</string>
    <string name="price">Price</string>
    <string name="pages">Pages</string>
    <string name="back">Back</string>
    <string name="detail_comic">Detail Comic</string>
    <string name="icon_close">Icon close</string>
</resources>