<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.WelcomeFragment"
    android:background="@color/backgroundFund">

    <View
        android:id="@+id/viewShape"
        android:layout_width="@dimen/dim_350_dp"
        android:layout_height="@dimen/dim_300_dp"
        android:layout_marginTop="@dimen/dim_130_dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_40_dp"
        android:text="@string/welcome_title"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dim_26_sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardViewWelcome"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewShape"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWelcome"
        android:layout_width="@dimen/dim_350_dp"
        android:layout_height="@dimen/dim_300_dp"
        android:layout_marginTop="@dimen/dim_60_dp"
        app:cardCornerRadius="@dimen/dim_15_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dim_10_dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorWhite"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorWhite"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldEmailLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/materialCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                app:buttonTint="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/textFieldPasswordLogin" />

            <Button
                android:id="@+id/containedButtonLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_20_dp"
                android:text="@string/log_in"
                android:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCheckBox"/>

            <Button
                android:id="@+id/textButtonCreateAccount"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorGreyDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containedButtonLogIn" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>