<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".comic.view.ComicFragment"
    android:background="@color/backgroundFund">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/imgLandscape"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/comic_landscape"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/landscape" />

        <ImageView
            android:id="@+id/imgComicCover"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:contentDescription="@string/image_comic"
            android:padding="5dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comicToolbar"
            tools:src="@drawable/spider_comic" />
        <TextView
            android:id="@+id/txtTitleComic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            tools:text="AMAZING SPIDER-MAN VOL. 2 HC (Hardcover)"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgComicCover"
            />
        <TextView
            android:id="@+id/txtDescriptionComic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dim_10_dp"
            android:layout_marginTop="@dimen/dim_20_dp"
            app:layout_constraintTop_toBottomOf="@id/txtTitleComic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            tools:text="The Greatest Super Hero of All Time RETURNS! The world may have changed since Spidey's been gone, but so has Peter Parker. This is a man with a second chance at life, and he's not wasting a moment of it. Same Parker Luck, new Parker attitude. Putting the friendly back in the neighborhood, the hero back into super hero, and the amazing back into Spider-Man! Also returning: The recharged and reenergized ELECTRO!"
            />
        <TextView
            android:id="@+id/txtPublishedFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/txtDescriptionComic"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/published"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:id="@+id/txtPublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/txtDescriptionComic"
            app:layout_constraintStart_toEndOf="@id/txtPublishedFixed"
            tools:text="April 30, 2014"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:id="@+id/txtPriceFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/txtPublishedFixed"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/txtPublishedFixed"
            app:layout_constraintStart_toEndOf="@id/txtPriceFixed"
            tools:text="$ 5,99"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:id="@+id/txtPageFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_10_dp"
            app:layout_constraintTop_toBottomOf="@id/txtPriceFixed"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pages"
            android:textStyle="bold"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:id="@+id/txtPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10_dp"
            android:layout_marginStart="@dimen/dim_20_dp"
            app:layout_constraintTop_toBottomOf="@id/txtPriceFixed"
            app:layout_constraintStart_toEndOf="@id/txtPriceFixed"
            tools:text="38"
            android:textSize="@dimen/dim_16_sp"
            android:textColor="@color/colorWhite"
            />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/comicToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:padding="@dimen/dim_10_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgBackComic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/colorWhite" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
