<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.view.RegisterFragment"
    android:background="@color/backgroundFund">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobarRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dim_20_dp"
        android:layout_height="@dimen/dim_20_dp"
        android:layout_marginStart="@dimen/dim_10_dp"
        android:layout_marginTop="@dimen/dim_20_dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_60_dp"
        android:layout_marginTop="@dimen/dim_16_dp"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dim_20_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toobarRegister" />

    <View
        android:id="@+id/viewShape"
        android:layout_width="@dimen/dim_350_dp"
        android:layout_height="@dimen/dim_300_dp"
        android:layout_marginTop="@dimen/dim_130_dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:id="@+id/viewIcon"
        android:layout_width="@dimen/dim_100_dp"
        android:layout_height="@dimen/dim_100_dp"
        android:layout_marginTop="@dimen/dim_100_dp"
        android:background="@drawable/icon_perfil_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="@dimen/dim_77_dp"
        android:layout_height="@dimen/dim_66_dp"
        android:layout_marginTop="@dimen/dim_12_dp"
        android:background="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="@+id/viewIcon"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewIcon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWelcome"
        android:layout_width="@dimen/dim_350_dp"
        android:layout_height="@dimen/dim_300_dp"
        android:layout_marginTop="@dimen/dim_60_dp"
        app:cardCornerRadius="@dimen/dim_15_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dim_10_dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorWhite"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewWelcome"
                tools:ignore="NotSibling">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorWhite"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorWhite"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/containedButtonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_20_dp"
                android:text="@string/save"
                android:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

